--- a/index.html
+++ b/index.html
@@ -8,16 +8,44 @@
     <script type="module" src="./src/components/Acordion.js"></script>
 </head>
 <body>
-    <main> 
-        <acordion-component title="Boca">
-            <span slot="contenido">Buen equipo</span>
-        </acordion-component>
-        <acordion-component title="River">
-            <span slot="contenido">E nada mal</span>
-        </acordion-component>
-        <acordion-component title="Estudiantes">
-            <span slot="contenido">Boca</span>
-        </acordion-component>
+    <header>
+        <nav id="navbar">
+            <ul id="categorias">
+                <li>Categoria 1</li>
+                <li>Categoria 1</li>
+                <li>Categoria 1</li>
+            </ul>
+            <p>Copypasting website</p>
+        </nav>
+    </header>
+    <hr>
+    <main>
+        <section id="presentacion">
+            <h1>ACORDIONES</h1>
+        </section> 
+        <section id="seccion-acordiones">
+            <acordion-component title="Boca">
+                <span slot="contenido">Buen equipo</span>
+            </acordion-component>
+            <acordion-component title="River">
+                <span slot="contenido">E nada mal</span>
+            </acordion-component>
+            <acordion-component title="Estudiantes">
+                <span slot="contenido">Boca</span>
+            </acordion-component>
+            <acordion-component title="Estudiantes">
+                <span slot="contenido">Boca</span>
+            </acordion-component>
+            <acordion-component title="Estudiantes">
+                <span slot="contenido">Boca</span>
+            </acordion-component>
+            <acordion-component title="Estudiantes">
+                <span slot="contenido">Boca</span>
+            </acordion-component>
+            <acordion-component title="Estudiantes">
+                <span slot="contenido">Boca</span>
+            </acordion-component>
+        </section>
     </main>
 </body>
 </html>
