--- a/index.html
+++ b/index.html
@@ -8,49 +8,66 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Acordion componente -->
     <script type="module" src="./src/components/Acordion.js"></script>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Title -->
     <title>Copypaste</title>
 </head>
 <body>
+    <!-- Navbar -->
     <header>
         <nav id="navbar">
+            <!-- categorias para filtrar -->
             <ul id="categorias">
-                <li>Categoria 1</li>
-                <li>Categoria 1</li>
-                <li>Categoria 1</li>
+                <li>Precios</li>
+                <li>Información</li>
+                <li>Reseñas</li>
             </ul>
+            <!-- Titulo navbar -->
             <p>Copypasting website</p>
         </nav>
     </header>
-    <hr>
     <main>
+        <!-- Titulo de presentación -->
         <section id="presentacion">
             <h1>ACORDIONES</h1>
-        </section> 
+        </section>
+        <!-- Seccion de componentes--> 
         <section id="seccion-acordiones">
+
             <acordion-component title="Boca">
                 <span slot="contenido">Buen equipo</span>
             </acordion-component>
+
             <acordion-component title="River">
                 <span slot="contenido">E nada mal</span>
             </acordion-component>
+
             <acordion-component title="Estudiantes">
                 <span slot="contenido">Boca</span>
             </acordion-component>
+
             <acordion-component title="Estudiantes">
                 <span slot="contenido">Boca</span>
             </acordion-component>
+
             <acordion-component title="Estudiantes">
                 <span slot="contenido">Boca</span>
             </acordion-component>
+
             <acordion-component title="Estudiantes">
                 <span slot="contenido">Boca</span>
             </acordion-component>
+
             <acordion-component title="Estudiantes">
                 <span slot="contenido">Boca</span>
             </acordion-component>
+
         </section>
     </main>
-    <!-- Toastify -->
+    <!-- Toastify (Notificaciones) -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
