--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         </section>
         <!-- Seccion de componentes--> 
         <section id="seccion-acordiones">
+            
+            <acordion-component title="Acordión" class="precio">
+                <span slot="contenido">Hola, Soy un acordión</span>
+            </acordion-component>
 
             <acordion-component title="Boca" class="precios">
                 <span slot="contenido">Buen equipo</span>
